--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "edu-http-classic",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Förväntad tid 6:30 minuter, inklusive skriva server.js utantill.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -20,12 +20,12 @@
   },
   "homepage": "https://github.com/miwashi-edu/edu-http-classic-js#readme",
   "dependencies": {
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "path": "^0.12.7",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "jest": "^28.1.3",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.20"
   }
 }
