--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "edu-http-classic",
   "version": "1.0.0",
   "description": "## Förväntad tid 6:30 minuter, inklusive skriva server.js utantill.",
-  "main": "server.js",
+  "main": "service.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest"
+    "start": "node service.js",
+    "dev": "nodemon service.js",
+    "test": "jest  --group=-component --group=-integration",
+    "component_test": "jest --group=component",
+    "integration_test": "jest --group=integration"
   },
   "repository": {
     "type": "git",
@@ -20,12 +22,20 @@
   },
   "homepage": "https://github.com/miwashi-edu/edu-http-classic-js#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "json5": "^2.2.1",
     "path": "^0.12.7",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "jest": "^28.1.3",
-    "nodemon": "^2.0.20"
+    "jest-runner-groups": "^2.2.0",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
+  },
+  "jest": {
+    "runner": "groups"
   }
 }
