--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "homepage": "https://github.com/miwashi-edu/edu-http-classic-js#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "json5": "^2.2.1",
+    "jsonwebtoken": "^9.0.2",
     "path": "^0.12.7",
     "serve-favicon": "^2.5.0",
     "uuid": "^9.0.0"
